# JumpingBird

./: .gitignore  Bird.cpp  Bird.h  CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.h  Makefile  Matrix4f.cpp  Matrix4f.h  Pipe.cpp  Pipe.h  README.md  Rectangle.h  Shader.cpp  Shader.h  Window.cpp  Window.h  backgroundFragmentShader.shader  backgroundVertexShader.shader  birdFragmentShader.shader  bird_shader.shader  cmake_install.cmake  gameParameters.json  main  main.cpp  rectangle_shader.shader
shaders/: birdVertexShader.shader  pipeFragmentShader.shader  pipeVertexShader.shader
src/: Bird.cpp  Bird.h  Game.cpp  Game.h  Matrix4f.cpp  Matrix4f.h  Pipe.cpp  Pipe.h  Rectangle.cpp  Rectangle.h  Shader.cpp  Window.cpp  Window.h  main.cpp
